--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -38,7 +38,8 @@ Package V1.0
 Package V2.0
 
   * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue_v2.html)
-
+  * [Deciding the matching tissue -- pre-estimate L](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue_v2_preL.html)
+  
 # Single QTL analysis
 
 Package V1.0
